--- a/.github/workflows/pawn-build.yml
+++ b/.github/workflows/pawn-build.yml
@@ -20,6 +20,10 @@ jobs:
   x86_32-build:
     runs-on: ubuntu-latest
     steps:
+      - name: download
+        uses: paulproteus/ubuntu-18.04-x86@0.1
+        with:
+          command: apt-get update && apt-get -y install gcc cmake make
       - name: Generation make files from CMake
         uses: paulproteus/ubuntu-18.04-x86@0.1
         with:
